test/valid/arrays1.art
fn main() {
    let mut x = [1, 2, 3, 0, 5, 6];
    x(2) = 5;
    x(3)
}
