test/invalid/uninferable.art
fn test() {
    return(0)
}
let foo = |x| x;
